3d model on one side of webpage

--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,25 @@
 <html>
   <head>
     <title>Express</title>
+    <script src="v3d.js"></script>
+    <script src="Room_Test.js"></script>
+
+    <link rel="stylesheet" href="Room_Test.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
 
   <body>
     <div class="main-container">
       <div class="left-container"></div>
-      <div class="right-container"></div>
+      <div class="right-container">
+        <div id="v3d-container">
+          <div
+            id="fullscreen_button"
+            class="fullscreen-button fullscreen-open"
+            title="Toggle fullscreen mode"
+          ></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
